[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pplkit"
version = "0.1.2"
description = "Pipeline building toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = ["dill", "pyyaml", "pandas", "pyarrow", "tomli-w"]

[project.optional-dependencies]
test = ["pytest", "numpy"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/pplkit"

[tool.sphinx]
project = "pplkit"
author = "IHME Math Sciences"
copyright = "2026, IHME Math Sciences"
version = "0.1.2"

[tool.ruff]
line-length = 80
src = ["src"]
