[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pplkit"
version = "1.0.0"
description = "Pipeline building toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = ["dill", "pyyaml", "pandas", "pyarrow", "tomli-w"]

[project.optional-dependencies]
test = ["pytest", "numpy"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo", "catppuccin[pygments]"]

[project.urls]
github = "https://github.com/ihmeuw-msca/pplkit"

[tool.ruff]
line-length = 80
src = ["src"]
